# PSQL-No-ORM-Client

./: CMakeLists.txt  README.md  db_operations.h  main.cpp  psql_getters.cpp  psql_getters.h  submenu.h
